@@ -5,6 +5,7 @@ Version 1.5.4
 * Don't read mark5 directories
 * Use mark5ipc to lock out mark5 units
 * Bug fix for post-F fringe rotation, where weights were being corrupted
+* Normalise filterbank packets to power, not energy
 
 Version 1.5.3, 2010 March 17
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
